# maimai-android-touch-panel-rs

./: Cargo.toml  LICENSE  README.md  README_en-US.md  start.bat
.github/workflows/: test-build.yml
examples/: getevent.rs
src/: config.rs  main.rs  serial_manager.rs  touch.rs
